Initial trial for samesite setup

--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,8 @@ RUMORS_LINE_BOT_SECRET=secret
 # Cookie related setup, expire time default to 86400 * 1000 * 14 milliseconds (14 days)
 COOKIE_MAXAGE=1209600000
 COOKIE_SECRETS=foo,bar
+# Set Samesite=none to enable cross-site login
+COOKIE_SAMESITE_NONE=1
 
 # Login-service credentials
 FACEBOOK_APP_ID=YOUR_FB_ID
